# easytier-macos

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  README_EN.md
.github/workflows/: macos-app.yml
Configurations/: Base.xcconfig  Debug.xcconfig  Release.xcconfig  Signing.example.xcconfig
Documentation/: ARCHITECTURE.md  GATEWAY_STATE_MACHINE.md
EasyTier.xcodeproj/: project.pbxproj
Packaging/: Applications.alias  EasyTierMac-Info.plist  EasyTierMac.entitlements  EasyTierPrivilegedHelper-Info.plist  GatewayPrivilegedHelper-Info.plist  RELEASE.md  SPARKLE.md  com.coldkiller.gateway.helper.plist  com.kkrainbow.easytier.mac.helper.plist
Rust/EasyTierGuiFFI/: Cargo.toml  GATEWAY.md
Rust/EasyTierGuiFFI/src/: lib.rs
Rust/EasyTierGuiFFI/src/gateway/: acme.rs  authority.rs  certificate_state.rs  config.rs  local_dns.rs  mod.rs  proxy.rs  status.rs  storage.rs  tls.rs
Sources/CEasyTierCoreFFI/: shim.c
Sources/CGatewayFFI/: shim.c
Sources/EasyTierCoreRuntime/: StaticEasyTierFFIClient.swift
Sources/EasyTierKeychainIntegrationHarness/: main.swift
Sources/EasyTierMac/: AppAppearanceSettings.swift  AppVersionInfo.swift  EasyTierApp.swift  EasyTierApplicationDelegate.swift  EasyTierColors.swift  LoginItemController.swift  MainWindowCommands.swift  MenuBar.swift  MenuBarContent.swift  SoftwareUpdateController.swift  WindowEffects.swift
Sources/EasyTierPrivilegedHelper/: main.swift
Sources/EasyTierRuntime/: GatewayHelperController.swift  StaticEasyTierFFIClient.swift  StaticGatewayFFIClient.swift
Sources/EasyTierShared/: AppliedMagicDNSRegistry.swift  EasyTierCoreClient.swift  MagicDNSCacheRefreshError.swift  MagicDNSCacheRefreshing.swift  MagicDNSSystemResolverConfigurator.swift  NetworkConfigTOMLCodec.swift  NetworkConfigValidator.swift  NetworkInfoMagicDNSAugmenter.swift  NetworkSecretInput.swift  NetworkSecretOperationOutcome.swift  NetworkSecretStore.swift  PerformanceSignposts.swift  SystemMagicDNSCacheRefresher.swift  Updater.swift  ValueNormalization.swift
Sources/GatewayPrivilegedHelper/: main.swift
Sources/GatewayRuntime/: GatewayHelperController.swift  GatewayLocalResolverConfigurator.swift  StaticGatewayFFIClient.swift
Tests/EasyTierCoreTests/: NetworkConfigTests.swift
Tests/EasyTierMacTests/: AppAppearanceSettingsTests.swift  AppArchitectureTests.swift  AppContextHostingTests.swift  ApplicationDelegateTests.swift  GatewayPresentationTests.swift  GatewayRuntimeControllerTests.swift  MagicDNSDisplayTests.swift  NetworkSecretAuthenticationPresentationCoordinatorTests.swift  NetworkSecretFieldStateTests.swift  PublishedServiceFormTests.swift  ServicesWorkspaceTests.swift  SoftwareUpdateAdapterTests.swift  SoftwareUpdateControllerTests.swift  TitlebarScrollEdgeEffectGeometryTests.swift  TitlebarScrollEdgeVisibilityTests.swift  WindowEffectsTests.swift  WorkspaceDataGridLayoutTests.swift
Tests/EasyTierRuntimeTests/: GatewayRuntimeTests.swift
Tests/EasyTierSharedTests/: AppliedMagicDNSTests.swift  ConfigApplyCoordinatorTests.swift  EasyTierRPCTests.swift  GatewayModelsTests.swift  MagicDNSSystemResolverConfiguratorTests.swift  NetworkConfigTests.swift  NetworkSecretInputTests.swift  NetworkSecretStoreTests.swift  PeerSubscriptionTests.swift  PrivilegedHelperBuildInfoTests.swift  RemoteConfigSessionTests.swift  RuntimeStressHarnessTests.swift  (+4 more)
scripts/: archive-app.sh  bootstrap.sh  build-debug-app.sh  build-debug-trace-dmg.sh  build-ffi.sh  build.sh  build_context.py  create-dmg.sh  dev-install-helper.sh  install-xcode-debug-app.sh  package-app.sh  release-artifact.sh  release-common.sh  release-publish.sh  release.sh  release_feed.py  repro-wake-lag.sh  sign-sparkle-for-xcode.sh  stress-ui-tabs.sh  test-keychain-integration.sh  test-rust.sh  test.sh  verify-app.sh  verify-release-dmg.sh  with-signing-keychain.sh  xcode-metadata-arguments.sh
(+224 files in other folders)
